# esp32-s2

./: .gitmodules  esp32-s2.code-workspace
components/i2s_parallel/: i2s_parallel.c
components/i2s_parallel/include/: i2s_parallel.h
components/lcd/: lcd.c
components/lcd/include/: lcd.h
components/lvgl/: CMakeLists.txt
components/lvgl/port/include/: esp32_lvgl.h  i2s_parallel.h  jd5858.h  lv_conf.h
components/lvgl/port/source/: i2s_parallel.c  jd5858.c  lvgl_port.c  lvgl_th.c
examples/aws-iot/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/aws-iot/main/: CMakeLists.txt  main.c
examples/aws-iot/main/certs/: certificate.pem.crt  private.pem.key  public.pem.key
examples/hello_world/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/lcd/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/lcd/main/: CMakeLists.txt  lv_demo_benchmark.c  lv_examples.h  main.c
examples/lcd/main/images/: test1.c  test2.c  test3.c
examples/modbus/: sdkconfig.old
examples/modbus/main/: main.c
examples/relay/: CMakeLists.txt  sdkconfig
examples/relay/main/: main.c
